--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <!-- TODO: Find a better looking icon -->
     <link rel="icon" type="image/jpeg" href="/logo.jpg" />
+    <link rel="preload" as="image" href="/background.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AprilsLilPugs</title>
   </head>
