--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,11 @@
     <link rel="preload" as="image" href="/background.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AprilsLilPugs</title>
+    <script
+      defer
+      src="https://analytics.aprilslilpugs.com/script.js"
+      data-website-id="bcc8c077-9c17-4383-9b3c-5eb43c0d0c83"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
