--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,10 @@
     <!-- TODO: Find a better looking icon -->
     <link rel="icon" type="image/jpeg" href="/logo.jpg" />
     <link rel="preload" as="image" href="/background.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <title>AprilsLilPugs</title>
     <script
       defer
